--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -1289,10 +1289,11 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "- 1. Edicational Level / Education Num\n",
-    "- 2. Capital Gain\n",
-    "- 3. Marital Status\n",
-    "- 4. "
+    "- 1. Edicational Level/Educational Num \n",
+    "- 2. Hours Per Week\n",
+    "- 3. Capital Gain\n",
+    "- 4. Occupation\n",
+    "- 5. Age"
    ]
   },
   {
@@ -1354,7 +1355,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "- All of my estimation about the main features except for marital status turned out correct.\n",
+    "- The education infers alot about the hourly wage.\n",
+    "- If we know the occupation and education and hours per week: we can get a very good prediction into donor's yearly income.\n",
+    "- I was not aware that marital status alot indicates that the donors are well. It makes sense since married couples send more than singles, which indicates about thier prosperity."
    ]
   },
   {
@@ -1367,11 +1373,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final Model trained on full data\n",
+      "------\n",
+      "Accuracy on testing data: 0.8376\n",
+      "F-score on testing data: 0.8903\n",
+      "\n",
+      "Final Model trained on reduced data\n",
+      "------\n",
+      "Accuracy on testing data: 0.8339\n",
+      "F-score on testing data: 0.8819\n"
+     ]
+    }
+   ],
    "source": [
     "# Import functionality for cloning a model\n",
     "from sklearn.base import clone\n",
@@ -1409,7 +1429,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "- If training tim is a factor, then I will prefer using reduced data as my training set.\n",
+    "- With \n"
    ]
   },
   {
