Adding the HTML copy of notebook

--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -1431,8 +1431,8 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "- If training tim is a factor, then I will prefer using reduced data as my training set.\n",
-    "- With \n"
+    "- If training time is a factor, then I will prefer using reduced data as my training set.\n",
+    "- Even after using the reduced main features, the accuracy score has only dropped by 1%.\n"
    ]
   },
   {
